--- a/android_ui/app/src/main/res/values/strings.xml
+++ b/android_ui/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="enter_password_again">Enter the password again</string>
     <string name="select_site_and_person">Select site and person</string>
     <string name="graph_general_stat">Graph of popularity of politicians by number of mentions</string>
-    <string name="graph_daily_stat">Graph of the number of pages with the mention of the policy from the selected period of time</string>
+    <string name="graph_daily_stat">Graph of the popularity of politicians by the number of references for the selected period of time</string>
     <string name="log_out">Log out</string>
+    <string name="buttonName">Login</string>
 </resources>
